
 - Fix for bug 26838: Ignore file uploads during request watcher tracking
 - Fix for bug 26832: Dropped misleading log output & check for locally active session during request watcher run
 - Fix for bug 26828: Create a repetitive file holder for image data when checking if image transformation is needed
 - Fix for bug 26852: Fixed OAuth provider callback

* 2013-05-28 - tobias.friedrich@open-xchange.com

 - Fix for bug 26807: Don't consider storage when checking for maximum allowed sessions
 - Fix for bug 26691: Modified error message in case of truncated fields

* 2013-05-28 - thorben.betten@open-xchange.com

 - Fix for bug 26815: Don't interrupt appender task if not finished

* 2013-05-27 - thorben.betten@open-xchange.com

 - Fix for bug 26779: Reduce log level for htmlunit.jar

* 2013-05-27 - marcus.klein@open-xchange.com

 - US 47575615: Added interface method for counting tasks, using that for folder object count value and added the according acceptance test.

* 2013-05-26 - thorben.betten@open-xchange.com

 - Fix for bug 26737: Added update task to enlarge the UID field of calendar tables
 - Fix for bug 26781: Proper invocation of OXException constructor

* 2013-05-24 - thorben.betten@open-xchange.com

 - Fix for bug 26474: Avoid timeout through initiating 102 Processing interim responses
 - Fix for bug 26479: Accept multiple upload files associated with the same field name
 - Fix for bug 24519: Maintain inlined images during auto-save and forward/reply actions

* 2013-05-23 - thorben.betten@open-xchange.com

 - Fix for bug 26760: Fixed possible ArrayIndexOutOfBoundsException

* 2013-05-22 - marc.arens@open-xchange.com

 - Fix for bug 26580: Remove superfluous warning

* 2013-05-21 - marcus.klein@open-xchange.com

 - Fix for bug 26680: Moved filemanagement bundles into an own package open-xchange-file-distribution.
 
 * 2013-05-17 - marc.arens@open-xchange.com

 - Fix for bug 26226: Use concurrent data structures to prevent NegativeArraySizeException